fixed stretched logo on ios7/8

--- a/css/base.css
+++ b/css/base.css
@@ -13,7 +13,8 @@ header .row { height: 100px; }
 .navbar .col-1-5 { -webkit-justify-content: flex-start; justify-content: flex-start; } 
 .navbar .col-4-5 { padding-right: 30px; }
 .navbar .col-4-5 { -webkit-justify-content: flex-end; justify-content: flex-end; }
-.logo { padding: 10px 20px; }
+.logo {  }
+.logo img { display: block; width: 238px; margin: 18px 20px; }
 .fa-bars { display: none; }
 .highlight { background: yellow; }
 
@@ -117,7 +118,7 @@ form textarea { min-height: 100px; }
 @media (max-width: 800px) {
 
 	.hide-desktop { display: block; }
-	header .row { height: auto; }
+	header .row { height: 70px; }
 	.navbar .col-1-5 { width: 100%; }
 	.navbar .col-4-5 { display: none; }
 	.navbar:after { content: ""; display: table; clear: both; }
@@ -126,7 +127,7 @@ form textarea { min-height: 100px; }
 	.mobile-links { overflow: hidden; height: 0; text-align: center; padding: 0; transition: all .3s; }
 	.mobile-links a { display: block; padding: 15px; font-size: 1.2em; }
 	.open { height: 290px; }
-	.logo { width: 220px; height: 69px;}
+	.logo img { width: 180px; margin: 10px 20px; }
 	.fa-bars { display: block; position: absolute; top: 19px; right: 20px; }
 } 
 
@@ -142,4 +143,5 @@ form textarea { min-height: 100px; }
 	.pad-lg { padding: 2em; }
 	.center-block-lg { min-height: 100px; }
 	.top-arrow { display: none !important; }
+	.logo img { margin: 10px 10px; }
 } 
